[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "solarcast"
version = "0.1.0"
description = "Solar irradiance nowcasting framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Danish Meteorological Institute", email = "dmi@dmi.dk" },
]
keywords = ["solar", "nowcasting", "irradiance", "meteorology", "renewable energy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/dmidk/solarcast"
Repository = "https://github.com/dmidk/solarcast"
Issues = "https://github.com/dmidk/solarcast/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["solarcast*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
